FullSb1-27-apr-15/src/objects/Goed_Master_Documents__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>For_Cosigner1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Cosigner1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Cosigner2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Cosigner2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Student</label>
        <type>Checkbox</type>
    </fields>
    <label>Goed Master Documents</label>
</CustomObject>